--- a/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-adm.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-adm.html
@@ -7,11 +7,10 @@
 </ion-header>
 <ion-content class="tab-desktop">
   <ion-tabs #tab color="customColor1"  selectedIndex="0"> 
-    <ion-tab tabIcon="settings" tabTitle="Perfis" [root]="perfilListPage"></ion-tab>
-    <ion-tab tabIcon="people" tabTitle="Grupos" [root]="grupoUsuarioPage"></ion-tab>
+    <ion-tab tabIcon="water" tabTitle="Distribuidoras" [root]="painelControleDistribuidorPage" tabBadge="{{distribuidorNaoHomoloado}}" tabBadgeStyle="danger"></ion-tab>
     <ion-tab tabIcon="bookmarks" tabTitle="Catalogo" [root]="catalogoProdutosPage"></ion-tab>
     <ion-tab tabIcon="cash" tabTitle="Pagamento" [root]="formasPagamentoPage"></ion-tab>        
-    <ion-tab tabIcon="water" tabTitle="Distribuidoras" [root]="painelControleDistribuidorPage" tabBadge="{{distribuidorNaoHomoloado}}"
-      tabBadgeStyle="danger"></ion-tab>
+    <ion-tab tabIcon="settings" tabTitle="Perfis" [root]="perfilListPage"></ion-tab>
+    <ion-tab tabIcon="people" tabTitle="Grupos" [root]="grupoUsuarioPage"></ion-tab>
   </ion-tabs>
 </ion-content>
